--- a/zjb/Tpl/Home/Introduce/introduce.html
+++ b/zjb/Tpl/Home/Introduce/introduce.html
@@ -1,5 +1,5 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="zh-CN">
+﻿<!DOCTYPE html>
+<html lang="zh-CN">
 <head>
 <title>
 公司
@@ -7,50 +7,63 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="description" content="" />
 <meta name="keywords" content="北京优途旧机动车经纪有限公司,优途汽车,优途汽车二手车,北京优途旧机动车经纪有限公司地址" />
-<link rel="stylesheet" href="__ROOT__/Public/images/reset.css" type="text/css" />
-<link rel="stylesheet" href="__ROOT__/Public/Home/company.css" type="text/css" />
+<link rel="stylesheet" href="__ROOT__/public/images/reset.css" type="text/css" />
+<link rel="stylesheet" href="__ROOT__/public/home/company.css" type="text/css" />
+<js href="__ROOT__/public/js/jquery-1.7.1.js" />
+<js href="__ROOT__/public/dist/js/bootstrap.js" />
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="__ROOT__/public/dist/css/bootstrap.css">
 
-<style type="text/css">
-	#
-</style>
-<script type="text/javascript">
-	
-	function tab(pid)
-	
-	{
-		var ps=['qbxw','qydt','yhcx'];
-			for(var i=0,len=ps.length;i<len;i++){
-				if(ps[i]==pid){
-					document.getElementById(ps[i]).style.display='block';
-					}else{
-						document.getElementById(ps[i]).style.display='none';
-				}
-			}
-	}
 
-</script>
+<!-- Optional theme -->
+<link rel="stylesheet" href="__ROOT__/public/dist/css/bootstrap-theme.css">
+
+<link rel="stylesheet" href="__ROOT__/Tpl/Public/dist/css/github.css"/>
+ <!--[if lte IE 6]>
+  <!-- bsie css 补丁文件 -->
+<link rel="stylesheet" href="__ROOT__/Tpl/Public/dist/css/bootstrap-ie6.css"/>
+<!-- bsie 额外的 css 补丁文件 -->
+<link rel="stylesheet" href="__ROOT__/Tpl/Public/dist/css/ie.css"/>
+ <![endif]-->
+<!-- Optional theme -->
+
+<link rel="stylesheet" href="__ROOT__/Tpl/public/dist/css/bootstrap-responsive.css"/>
  </head>
  <body>
  	
  <div id="container">
-	<div id="pos">
+	<div id="pos" >
 		
-		<ul id="rpos">
-			</li><a href="{:U('Home/Login/login')}#desc" target="_blank">登录</a></li>
-			</li><a href="{:U('Register/register')}#desc" target="_blank">注册</a></li>
+		<ul class="nav nav-tabs ">
+			
+				<li class="dropdown">
+				<a class="dropdown-toggle" data-toggle="dropdown" href="#">
+					 注册<span class="caret"></span>
+				</a>
+					<ul class="dropdown-menu">
+							<li><a href="{:U('Register/hyregister')}#desc">会员注册</a></li>
+							<li><a href="{:U('Register/register')}#desc">个人注册</a></li>
+					</ul>
+				</li>
+			<li class="active"><a href="{:U('Login/login')}#desc">登录</a></li>
+			<li class="active"><a href="{:U('Audit/audit')}#desc">欢迎  kkkk登录</a></li>
 		</ul>
 	
 	</div>	
 		<div id="c0">
-				<img src="__ROOT__/Public/images/about_banner.jpg" alt="banner"/>
+				<img src="__ROOT__/public/images/about_banner.jpg" alt="banner"/>
 			</div>
 		 <div id="banner">
-			<ul id="nav">
-				<li><a href="{:U('Home/Company/company')}#desc">首页</a></li>
-				<li><a href="{:U('Home/New/new1')}#desc" target="_blank">新闻广告</a></li>
-				<li><a href="#" target="_blank">咨询答疑</a></li>
-				<li><a href="{:U('Home/Introduce/introduce')}#desc" target="_blank">公司介绍</a></li>
-			</ul>
+		 
+
+<ul class="nav nav-pills">
+  <li class="active"><a href="{:U('Home/Company/company')}#desc" target="_blank">首页</a></li>
+  <li><a href="{:U('Home/New/new1')}#desc" target="_blank">新闻广告</a></li>
+  <li><a href="#" target="_blank">咨询答疑</a></li>
+  <li><a href="{:U('Home/Introduce/introduce')}#desc" target="_blank">公司介绍</a></li>
+</ul>
+
+
 		</div>
 		
 	 <div id="main">
