--- a/zjb/Tpl/Home/Buyhouse/buyhouse.html
+++ b/zjb/Tpl/Home/Buyhouse/buyhouse.html
@@ -47,7 +47,7 @@
  </head>
  <body onload="myfunction()">
  	
- <div id="container">
+ <div id="container" style="width:85%; min-width:1170px;">
 	<div id="pos" >
 		
 		<ul class="nav nav-tabs ">
@@ -74,7 +74,8 @@
 				<span>{$c}</span>
 				<a href="{:U('City/city')}#desc" target="_blank">城市切换</a>
 			</div>
-			<img src="" alt="banner"/>
+			<p> 
+				fddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd</p>
 			<div id="ing">
 				<span>商家合作：133-0578-0578<br>
 				资金合作：153-0578-0578
@@ -91,9 +92,8 @@
 				<li><a href="{:U('Zhucar/zhucar')}#desc">我要租车</a></li>
 				<li><a href="{:U('Daikuang/daikuang')}#desc">我要贷款</a></li>
 				<li><a href="{:U('Licai/licai')}#desc">我要理财</a></li>&nbsp&nbsp&nbsp&nbsp&nbsp
-			
-				<li class="navbar-right"><a href="{:U('Licai/licai')}#desc">我要理财</a></li>
-			</ul>
+				<li style="width:450px"> </li>
+				<li class="navbar-right" style="text-align:right;"><a href="{:U('Publish/publish')}#desc">我要登记</a></li>
 			
 		</div>
 	 <div id="main">
@@ -114,12 +114,42 @@
 							<li><a href="#">青田</a></li>
 							<li><a href="#">缙云</a></li>
 						</ul>
-					<a class="navbar-brand" href="#">分类 :</a>							
+					<a class="navbar-brand" href="#">类型 :</a>							
 						<ul class="nav nav-pills navbar-brand">
 							<li class="active"><a href="#">不限</a></li>
-							<li><a href="#">房产中介</a></li>
-							<li><a href="#">汽车服务</a></li>
-							<li><a href="#">金融担保</a></li>
+							<li><a href="#">普通住宅</a></li>
+							<li><a href="#">高层住宅</a></li>
+							<li><a href="#">民房</a></li>
+							<li><a href="#">别墅</a></li>
+							<li><a href="#">公寓</a></li>
+							<li><a href="#">写字楼</a></li>
+							<li><a href="#">商铺</a></li>
+							<li><a href="#">厂房</a></li>
+							<li><a href="#">其他</a></li>
+						</ul>
+					<a class="navbar-brand" href="#">户型 :</a>							
+						<ul class="nav nav-pills navbar-brand">
+							<li class="active"><a href="#">不限</a></li>
+							<li><a href="#">1室</a></li>
+							<li><a href="#">2室</a></li>
+							<li><a href="#">3室</a></li>
+							<li><a href="#">4室</a></li>
+							<li><a href="#">5室</a></li>
+							<li><a href="#">6室</a></li>
+							<li><a href="#">7室</a></li>
+							<li><a href="#">8室</a></li>
+							<li><a href="#">9室</a></li>
+							<li><a href="#">多室</a></li>
+						</ul>
+					 <a class="navbar-brand" href="#">售价 :</a>							
+						<ul class="nav nav-pills navbar-brand">
+							<li class="active"><a href="#">不限</a></li>
+							<li><a href="#">50万以下</a></li>
+							<li><a href="#">50万-100万</a></li>
+							<li><a href="#">100万-150万</a></li>
+							<li><a href="#">150万-200万</a></li>
+							<li><a href="#">200万以上</a></li>
+							<li><a href="#">面议</a></li>
 						</ul>
 				
 					<a class="navbar-brand" href="#">排序 :</a>							
@@ -365,7 +395,15 @@
 			</div>
 		
 		</div>	
-		
+		<ul class="pagination">
+  <li><a href="#">&laquo;</a></li>
+  <li><a href="#">1</a></li>
+  <li><a href="#">2</a></li>
+  <li><a href="#">3</a></li>
+  <li><a href="#">4</a></li>
+  <li><a href="#">5</a></li>
+  <li><a href="#">&raquo;</a></li>
+</ul>
   </div>
  </body>
 </html>
