--- a/zjb/Tpl/Home/Company/company.html
+++ b/zjb/Tpl/Home/Company/company.html
@@ -25,7 +25,6 @@
 <link rel="stylesheet" href="__ROOT__/Tpl/Public/dist/css/ie.css"/>
  <![endif]-->
 <!-- Optional theme -->
-
 <link rel="stylesheet" href="__ROOT__/Tpl/public/dist/css/bootstrap-responsive.css"/>
 
 <style type="text/css">
@@ -62,7 +61,7 @@
 <ul class="nav nav-pills">
   <li class="active"><a href="{:U('Home/Company/company')}#desc" target="_blank">首页</a></li>
   <li><a href="{:U('Home/New/new1')}#desc" target="_blank">新闻广告</a></li>
-  <li><a href="#" target="_blank">咨询答疑</a></li>
+  <li><a href="{:U('Home/Answers/answers')}#desc" target="_blank">咨询答疑</a></li>
   <li><a href="{:U('Home/Introduce/introduce')}#desc" target="_blank">公司介绍</a></li>
 </ul>
 
@@ -107,32 +106,34 @@
         
         <li class="span30">
           <div class="thumbnail">
-            <a href="{:U('Home/Innerpage/innerpage')}#desc" target="_blank"><img src="http://placehold.it/260x180" alt=""><a>
+            <a href="{:U('Home/Innerpage/innerpage')}#desc" target="_blank"><img src="http://placehold.it/260x180" alt=""></a>
             <div class="caption">
-              <h5>缩略图标签</h5>
-              <p></p>
-              <p><a href="#" class="btn btn-primary">按钮</a> <a href="#" class="btn">按钮</a></p>
+              <h3>缩略图标签</h3>
+				<p>方便的货物管理</p>
+				<p>方便的货物管理</p>
             </div>
           </div>
         </li>
 		<li class="span30">
           <div class="thumbnail">
-            <a href="{:U('Home/Innerpage/innerpage')}#desc" target="_blank"><img src="http://placehold.it/260x180" alt=""><a>
+            <a href="{:U('Home/Innerpage/innerpage')}#desc" target="_blank"><img src="http://placehold.it/260x180" alt=""></a>
             <div class="caption">
-              <h5>缩略图标签</h5>
-              <p></p>
-              <p><a href="#" class="btn btn-primary">按钮</a> <a href="#" class="btn">按钮</a></p>
+             <h3>缩略图标签</h3>
+			<p>方便的货物管理</p>
+			<p>方便的货物管理</p>
+
             </div>
-          </div>
+            </div>
+          
         </li>
 		
 		<li class="span30">
           <div class="thumbnail">
-            <a href="{:U('Home/Innerpage/innerpage')}#desc" target="_blank"><img src="http://placehold.it/260x180" alt=""><a>
+            <a href="{:U('Home/Innerpage/innerpage')}#desc" target="_blank"><img src="http://placehold.it/260x180" alt=""></a>
             <div class="caption">
-              <h5>缩略图标签</h5>
-              <p></p>
-              <p><a href="#" class="btn btn-primary">按钮</a> <a href="#" class="btn">按钮</a></p>
+              <h3>缩略图标签</h3>
+				<p>方便的货物管理</p>
+				<p>方便的货物管理</p>
             </div>
           </div>
         </li>
@@ -140,9 +141,9 @@
           <div class="thumbnail">
             <img src="http://placehold.it/260x180" alt="">
             <div class="caption">
-              <h5>缩略图标签</h5>
-              <p></p>
-              <p><a href="#" class="btn btn-primary">按钮</a> <a href="#" class="btn">按钮</a></p>
+              <h3>缩略图标签</h3>
+				<p>方便的货物管理</p>
+				<p>方便的货物管理</p>
             </div>
           </div>
         </li>
@@ -150,9 +151,9 @@
           <div class="thumbnail">
             <img src="http://placehold.it/260x180" alt="">
             <div class="caption">
-              <h5>缩略图标签</h5>
-              <p></p>
-              <p><a href="#" class="btn btn-primary">按钮</a> <a href="#" class="btn">按钮</a></p>
+              <h3>缩略图标签</h3>
+				<p>方便的货物管理</p>
+				<p>方便的货物管理</p>
             </div>
           </div>
         </li>
@@ -160,9 +161,9 @@
           <div class="thumbnail">
             <img src="http://placehold.it/260x180" alt="">
             <div class="caption">
-              <h5>缩略图标签</h5>
-              <p></p>
-              <p><a href="#" class="btn btn-primary">按钮</a> <a href="#" class="btn">按钮</a></p>
+              <h3>缩略图标签</h3>
+				<p>方便的货物管理</p>
+				<p>方便的货物管理</p>
             </div>
           </div>
         </li>
@@ -170,9 +171,9 @@
           <div class="thumbnail">
             <img src="http://placehold.it/260x180" alt="">
             <div class="caption">
-              <h5>缩略图标签</h5>
-              <p></p>
-              <p><a href="#" class="btn btn-primary">按钮</a> <a href="#" class="btn">按钮</a></p>
+              <h3>缩略图标签</h3>
+				<p>方便的货物管理</p>
+				<p>方便的货物管理</p>
             </div>
           </div>
         </li>
@@ -180,9 +181,9 @@
           <div class="thumbnail">
             <img src="http://placehold.it/260x180" alt="">
             <div class="caption">
-              <h5>缩略图标签</h5>
-              <p></p>
-              <p><a href="#" class="btn btn-primary">按钮</a> <a href="#" class="btn">按钮</a></p>
+              <h3>缩略图标签</h3>
+				<p>方便的货物管理</p>
+				<p>方便的货物管理</p>
             </div>
           </div>
         </li>
@@ -190,9 +191,9 @@
           <div class="thumbnail">
             <img src="http://placehold.it/260x180" alt="">
             <div class="caption">
-              <h5>缩略图标签</h5>
-              <p></p>
-              <p><a href="#" class="btn btn-primary">按钮</a> <a href="#" class="btn">按钮</a></p>
+              <h3>缩略图标签</h3>
+				<p>方便的货物管理</p>
+				<p>方便的货物管理</p>
             </div>
           </div>
         </li>
@@ -200,9 +201,9 @@
           <div class="thumbnail">
             <img src="http://placehold.it/260x180" alt="">
             <div class="caption">
-              <h5>缩略图标签</h5>
-              <p></p>
-              <p><a href="#" class="btn btn-primary">按钮</a> <a href="#" class="btn">按钮</a></p>
+              <h3>缩略图标签</h3>
+				<p>方便的货物管理</p>
+				<p>方便的货物管理</p>
             </div>
           </div>
         </li>
@@ -210,9 +211,9 @@
           <div class="thumbnail">
             <img src="http://placehold.it/260x180" alt="">
             <div class="caption">
-              <h5>缩略图标签</h5>
-              <p></p>
-              <p><a href="#" class="btn btn-primary">按钮</a> <a href="#" class="btn">按钮</a></p>
+              <h3>缩略图标签</h3>
+				<p>方便的货物管理</p>
+				<p>方便的货物管理</p>
             </div>
           </div>
         </li>
@@ -220,9 +221,9 @@
           <div class="thumbnail">
             <img src="http://placehold.it/260x180" alt="">
             <div class="caption">
-              <h5>缩略图标签</h5>
-              <p></p>
-              <p><a href="#" class="btn btn-primary">按钮</a> <a href="#" class="btn">按钮</a></p>
+              <h3>缩略图标签</h3>
+				<p>方便的货物管理</p>
+				<p>方便的货物管理</p>
             </div>
           </div>
         </li>
@@ -230,9 +231,9 @@
           <div class="thumbnail">
             <img src="http://placehold.it/260x180" alt="">
             <div class="caption">
-              <h5>缩略图标签</h5>
-              <p></p>
-              <p><a href="#" class="btn btn-primary">按钮</a> <a href="#" class="btn">按钮</a></p>
+              <h3>缩略图标签</h3>
+				<p>方便的货物管理</p>
+				<p>方便的货物管理</p>
             </div>
           </div>
         </li>
@@ -240,9 +241,9 @@
           <div class="thumbnail">
             <img src="http://placehold.it/260x180" alt="">
             <div class="caption">
-              <h5>缩略图标签</h5>
-              <p></p>
-              <p><a href="#" class="btn btn-primary">按钮</a> <a href="#" class="btn">按钮</a></p>
+              <h3>缩略图标签</h3>
+				<p>方便的货物管理</p>
+				<p>方便的货物管理</p>
             </div>
           </div>
         </li>
