--- a/zjb/Tpl/Home/Zhuhouse/zhuhouse.html
+++ b/zjb/Tpl/Home/Zhuhouse/zhuhouse.html
@@ -46,7 +46,7 @@
  </head>
  <body onload="myfunction()">
  	
- <div id="container">
+ <div id="container" style="width:85%; min-width:1170px;">
 	<div id="pos" >
 		
 		<ul class="nav nav-tabs ">
@@ -73,7 +73,8 @@
 				<span>{$c}</span>
 				<a href="{:U('City/city')}#desc" target="_blank">城市切换</a>
 			</div>
-			<span>中介邦</span>
+			<p> 
+				fddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd</p>
 			<div id="ing">
 				<span>商家合作：133-0578-0578<br>
 				资金合作：153-0578-0578
@@ -90,8 +91,8 @@
 				<li><a href="{:U('Zhucar/zhucar')}#desc">我要租车</a></li>
 				<li><a href="{:U('Daikuang/daikuang')}#desc">我要贷款</a></li>
 				<li><a href="{:U('Licai/licai')}#desc">我要理财</a></li>&nbsp&nbsp&nbsp&nbsp&nbsp
-			
-				<li class="navbar-right"><a href="{:U('Licai/licai')}#desc">我要理财</a></li>
+				<li style="width:450px"> </li>
+				<li class="navbar-right" style="text-align:right;"><a href="{:U('Publish/publish')}#desc">我要登记</a></li>
 			</ul>
 			
 		</div>
@@ -113,19 +114,49 @@
 							<li><a href="#">青田</a></li>
 							<li><a href="#">缙云</a></li>
 						</ul>
-					<a class="navbar-brand" href="#">分类 :</a>							
+					<a class="navbar-brand" href="#">类型 :</a>							
 						<ul class="nav nav-pills navbar-brand">
 							<li class="active"><a href="#">不限</a></li>
-							<li><a href="#">房产中介</a></li>
-							<li><a href="#">汽车服务</a></li>
-							<li><a href="#">金融担保</a></li>
+							<li><a href="#">普通住宅</a></li>
+							<li><a href="#">高层住宅</a></li>
+							<li><a href="#">民房</a></li>
+							<li><a href="#">别墅</a></li>
+							<li><a href="#">公寓</a></li>
+							<li><a href="#">写字楼</a></li>
+							<li><a href="#">商铺</a></li>
+							<li><a href="#">厂房</a></li>
+							<li><a href="#">其他</a></li>
+						</ul>
+					<a class="navbar-brand" href="#">户型 :</a>							
+						<ul class="nav nav-pills navbar-brand">
+							<li class="active"><a href="#">不限</a></li>
+							<li><a href="#">1室</a></li>
+							<li><a href="#">2室</a></li>
+							<li><a href="#">3室</a></li>
+							<li><a href="#">4室</a></li>
+							<li><a href="#">5室</a></li>
+							<li><a href="#">6室</a></li>
+							<li><a href="#">7室</a></li>
+							<li><a href="#">8室</a></li>
+							<li><a href="#">9室</a></li>
+							<li><a href="#">多室</a></li>
+						</ul>
+					 <a class="navbar-brand" href="#">售价 :</a>							
+						<ul class="nav nav-pills navbar-brand">
+							<li class="active"><a href="#">不限</a></li>
+							<li><a href="#">500元以下</a></li>
+							<li><a href="#">500-1000元</a></li>
+							<li><a href="#">1000-1500元</a></li>
+							<li><a href="#">1500-2000元</a></li>
+							<li><a href="#">2000元以上</a></li>
+							<li><a href="#">面议</a></li>
 						</ul>
 				
 					<a class="navbar-brand" href="#">排序 :</a>							
 						<ul class="nav nav-pills navbar-brand">
 							<li class="active"><a href="#">默认</a></li>
 							<li><a href="#">最新</a></li>
-							<li><a href="#">人气</a></li>
+							<li><a href="#">租金</a></li>
 						</ul>					
 				</div>
 	 
@@ -364,7 +395,15 @@
 			</div>
 		
 		</div>	
-		
+		<ul class="pagination">
+  <li><a href="#">&laquo;</a></li>
+  <li><a href="#">1</a></li>
+  <li><a href="#">2</a></li>
+  <li><a href="#">3</a></li>
+  <li><a href="#">4</a></li>
+  <li><a href="#">5</a></li>
+  <li><a href="#">&raquo;</a></li>
+</ul>
   </div>
  </body>
 </html>
