--- a/zjb/Tpl/Home/Index/index.html
+++ b/zjb/Tpl/Home/Index/index.html
@@ -8,8 +8,11 @@
 <meta name="description" content="" />
 <meta name="keywords" content="北京优途旧机动车经纪有限公司,优途汽车,优途汽车二手车,北京优途旧机动车经纪有限公司地址" />
 <js href="__ROOT__/public/js/jquery-1.7.1.js" />
+
 <js href="__ROOT__/public/dist/js/bootstrap.js" />
 <!-- Latest compiled and minified CSS -->
+
+
 <link rel="stylesheet" href="__ROOT__/public/dist/css/bootstrap.css">
 
 
@@ -26,7 +29,6 @@
  <![endif]-->
 <!-- Optional theme -->
 
-<link rel="stylesheet" href="__ROOT__/Tpl/public/dist/css/bootstrap-responsive.css"/>
 
 
 
@@ -56,7 +58,7 @@
  
 
  	
- <div id="container" >
+ <div class="container" style="width:85%; min-width:1170px;">
 	<div id="pos" >
 		
 		<ul class="nav nav-tabs ">
@@ -71,7 +73,7 @@
 					</ul>
 				</li>
 			<li class="active"><a href="{:U('Login/login')}#desc">登录</a></li>
-			<li class="active"><a href="{:U('Audit/audit')}#desc">欢迎  kkkk登录</a></li>
+			<li class="active"><a href="{:U('Audit/audit')}#desc">欢迎  kkkk登录</a><a href="{:U('Comaudit/audit')}#desc"></a></li>
 		</ul>
 	
 	</div>	
@@ -82,8 +84,11 @@
 			<div id="city">
 				<span>{$c}</span>&nbsp&nbsp&nbsp&nbsp
 				<a href="{:U('City/city')}#desc" target="_blank">[城市切换]</a>
+
 			</div>
-			<span> 中介服务<span>
+			<p style="width:480px;"> 
+				fddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd</p>
+			
 			<div id="ing">
 				<span>商家合作：133-0578-0578<br>
 				资金合作：153-0578-0578
@@ -100,14 +105,13 @@
 				<li><a href="{:U('Zhucar/zhucar')}#desc">我要租车</a></li>
 				<li><a href="{:U('Daikuang/daikuang')}#desc">我要贷款</a></li>
 				<li><a href="{:U('Licai/licai')}#desc">我要理财</a></li>&nbsp&nbsp&nbsp&nbsp&nbsp
-			
-				<li class="navbar-right"><a href="{:U('Publish/publish')}#desc">我要登记</a></li>
+				<li style="width:450px"> </li>
+				<li class="navbar-right" style="text-align:right;"><a href="{:U('Publish/publish')}#desc">我要登记</a></li>
 			</ul>
-			
 		</div>
 	 <div id="main">
 			
-				<img src="__ROOT__/public/images/about_banner.jpg" alt="banner"/>
+				<img src="__ROOT__/public/images/about_banner.jpg" style="width: 100%;" alt="banner"/>
 			
 			
 	<form class="form-search form-inline"><input class="input-medium search-query" type="text" /><button class="btn" contenteditable="true" type="submit">查找</button></form> 
@@ -155,7 +159,7 @@
            <a href="{:U('Company/company')}#desc"> 
 				<img src="__ROOT__/public/images/about_banner.jpg" alt=""></a>
             <div class="caption">
-			<p>方便的货物管理</p>
+			 <h3>缩略图标签</h3>
 			<p>方便的货物管理</p>
 			<p>方便的货物管理</p>
 			<p>方便的货物管理</p>
@@ -165,49 +169,49 @@
         </li>
          <li class="span3" id="2">
           <div class="thumbnail">
-            <img src="http://placehold.it/260x180" alt="">
+            <img src="" alt="">
             <div class="caption">
+			<h3>缩略图标签</h3>
 			<p>方便的货物管理</p>
 			<p>方便的货物管理</p>
 			<p>方便的货物管理</p>
-			<p>方便的货物管理</p>
-              <p><a href="#" class="btn btn-primary">按钮</a> <a href="#" class="btn">按钮</a></p>
+              <p><a href="#" class="btn btn-primary">推荐</a> <a href="#" class="btn">评论</a></p>
             </div>
           </div>
         </li>
 		 <li class="span3" id="3">
           <div class="thumbnail">
-            <img src="http://placehold.it/260x180" alt="">
+            <img src="" alt="">
             <div class="caption">
+			<h3>缩略图标签</h3>
 			<p>方便的货物管理</p>
 			<p>方便的货物管理</p>
 			<p>方便的货物管理</p>
-			<p>方便的货物管理</p>
-              <p><a href="#" class="btn btn-primary">按钮</a> <a href="#" class="btn">按钮</a></p>
+             <p><a href="#" class="btn btn-primary">推荐</a> <a href="#" class="btn">评论</a></p>
             </div>
           </div>
         </li>
 		 <li class="span3" id="4">
           <div class="thumbnail">
-            <img src="http://placehold.it/260x180" alt="">
+            <img src="" alt="">
             <div class="caption">
+			 <h3>缩略图标签</h3>
 			<p>方便的货物管理</p>
 			<p>方便的货物管理</p>
 			<p>方便的货物管理</p>
-			<p>方便的货物管理</p>
-              <p><a href="#" class="btn btn-primary">按钮</a> <a href="#" class="btn">按钮</a></p>
+              <p><a href="#" class="btn btn-primary">推荐</a> <a href="#" class="btn">评论</a></p>
             </div>
           </div>
         </li>
 		 <li class="span3" id="5">
           <div class="thumbnail">
-            <img src="http://placehold.it/260x180" alt="">
+            <img src="" alt="">
             <div class="caption">
+			 <h3>缩略图标签</h3>
 			<p>方便的货物管理</p>
 			<p>方便的货物管理</p>
 			<p>方便的货物管理</p>
-			<p>方便的货物管理</p>
-              <p><a href="#" class="btn btn-primary">按钮</a> <a href="#" class="btn">按钮</a></p>
+             <p><a href="#" class="btn btn-primary">推荐</a> <a href="#" class="btn">评论</a></p>
             </div>
           </div>
         </li>
