--- a/zjb/Tpl/Home/Comaudit/left.html
+++ b/zjb/Tpl/Home/Comaudit/left.html
@@ -86,13 +86,12 @@ h3 a {
 <div id="container">
       <h3 class="type"><a href="{:U('Index/index')}" target="_top">返回首页</a></h3>
       
-	  <h3 class="type"><a href="{:U('Audit/right')}" target="main">公司管理</a></h3>
+	  <h3 class="type"><a href="{:U('Comaudit/right')}" target="main">公司管理</a></h3>
       <div class="content">
 		<div style="background:url(__PUBLIC__/admin/adminImages/menu_topline.gif); width:182px; height:5px; overflow:hidden"></div>
         <ul class="MM">
-			<li><a href="{:U('Audit/password')}" target="main">修改密码</a></li>
-			<li><a href="{:U('Audit/publishmsg')}" target="main">已经发布消息</a></li>
-			<li><a href="{:U('Company/companyPic')}" target="main">退出管理</a></li>
+			<li><a href="{:U('Comaudit/password')}" target="main">修改密码</a></li>
+			<li><a href="{:U('Comaudit/publishmsg')}" target="main">已经发布消息</a></li>
         </ul>
 	  </div>
 	<!--
