--- a/zjb/Tpl/Home/Comaudit/right.html
+++ b/zjb/Tpl/Home/Comaudit/right.html
@@ -27,14 +27,14 @@ body {
  <form class="form-horizontal">
     <fieldset>
       <div id="legend" class="">
-        <legend class="">表单名</legend>
+        <legend class="">公司管理</legend>
       </div>
     <div class="control-group">
 
           <!-- Text input-->
           <label class="control-label" for="input01">公司名称</label>
           <div class="controls">
-            <input type="text" placeholder="placeholder" class="input-xlarge">
+            <input type="text" placeholder="" class="input-xlarge">
             <p class="help-block"></p>
           </div>
         </div>
@@ -51,12 +51,32 @@ body {
           </div>
         </div>
 
+		 <div class="control-group">
+
+          <!-- Text input-->
+          <label class="control-label" for="input01">公司类型</label>
+          <div class="controls">
+            <input type="text" placeholder="" class="input-xlarge">
+            <p class="help-block"></p>
+          </div>
+        </div>
+
     <div class="control-group">
 
           <!-- Text input-->
           <label class="control-label" for="input01">主营</label>
           <div class="controls">
-            <input type="text" placeholder="placeholder" class="input-xlarge">
+            <input type="text" placeholder="" class="input-xlarge">
+            <p class="help-block"></p>
+          </div>
+        </div>
+
+	 <div class="control-group">
+
+          <!-- Text input-->
+          <label class="control-label" for="input01">邮政编码</label>
+          <div class="controls">
+            <input type="text" placeholder="" class="input-xlarge">
             <p class="help-block"></p>
           </div>
         </div>
@@ -70,6 +90,14 @@ body {
             <p class="help-block"></p>
           </div>
         </div>
+		<div class="control-group">
+          <label class="control-label">上传图片</label>
+
+          <!-- File Upload -->
+          <div class="controls">
+            <input class="input-file" id="fileInput" type="file">
+          </div>
+        </div>
 
     
 
@@ -80,11 +108,19 @@ body {
           <!-- Text input-->
           <label class="control-label" for="input01">手机号码</label>
           <div class="controls">
-            <input type="text" placeholder="placeholder" class="input-xlarge">
+            <input type="text" placeholder="" class="input-xlarge">
             <p class="help-block"></p>
           </div>
         </div>
 
+	<div class="control-group">
+          <label class="control-label"></label>
+
+          <!-- Button -->
+          <div class="controls">
+            <button class="btn btn-default">确定</button>
+          </div>
+        </div>
     </fieldset>
   </form>
 
