--- a/zjb/Tpl/Home/Index/index.html
+++ b/zjb/Tpl/Home/Index/index.html
@@ -159,11 +159,11 @@
            <a href="{:U('Company/company')}#desc"> 
 				<img src="__ROOT__/public/images/about_banner.jpg" alt=""></a>
             <div class="caption">
-			 <h3>缩略图标签</h3>
-			<p>方便的货物管理</p>
-			<p>方便的货物管理</p>
-			<p>方便的货物管理</p>
-              <p><a href="#" class="btn btn-primary">按钮</a> <a href="#" class="btn">按钮</a></p>
+			 <h3>丽水市贷贷邦经济信息咨询有限公司</h3>
+			<p>地址：丽水市莲都区古城路147号</p>
+			<p>主营:  中小企业及个人贷款业务</p>
+			<p><span>联系人:谢先生</span>&nbsp&nbsp &nbsp <span>手机:18806787799</span></p>
+              <p style="text-align: center;"><a href="#" class="btn btn-primary">推荐</a> <a href="#" class="btn">评论</a></p>
             </div>
           </div>
         </li>
@@ -171,11 +171,11 @@
           <div class="thumbnail">
             <img src="" alt="">
             <div class="caption">
-			<h3>缩略图标签</h3>
-			<p>方便的货物管理</p>
-			<p>方便的货物管理</p>
-			<p>方便的货物管理</p>
-              <p><a href="#" class="btn btn-primary">推荐</a> <a href="#" class="btn">评论</a></p>
+			<h3>丽水市贷贷邦经济信息咨询有限公司</h3>
+			<p>地址：丽水市莲都区古城路147号</p>
+			<p>主营:  中小企业及个人贷款业务</p>
+			<p><span>联系人:谢先生</span>&nbsp&nbsp &nbsp <span>手机:18806787799</span></p>
+              <p style="text-align: center;"><a href="#" class="btn btn-primary">推荐</a> <a href="#" class="btn">评论</a></p>
             </div>
           </div>
         </li>
@@ -183,11 +183,11 @@
           <div class="thumbnail">
             <img src="" alt="">
             <div class="caption">
-			<h3>缩略图标签</h3>
-			<p>方便的货物管理</p>
-			<p>方便的货物管理</p>
-			<p>方便的货物管理</p>
-             <p><a href="#" class="btn btn-primary">推荐</a> <a href="#" class="btn">评论</a></p>
+			<h3>丽水市贷贷邦经济信息咨询有限公司</h3>
+			<p>地址：丽水市莲都区古城路147号</p>
+			<p>主营:  中小企业及个人贷款业务</p>
+			<p><span>联系人:谢先生</span>&nbsp&nbsp &nbsp <span>手机:18806787799</span></p>
+              <p style="text-align: center;"><a href="#" class="btn btn-primary">推荐</a> <a href="#" class="btn">评论</a></p>
             </div>
           </div>
         </li>
@@ -195,11 +195,11 @@
           <div class="thumbnail">
             <img src="" alt="">
             <div class="caption">
-			 <h3>缩略图标签</h3>
-			<p>方便的货物管理</p>
-			<p>方便的货物管理</p>
-			<p>方便的货物管理</p>
-              <p><a href="#" class="btn btn-primary">推荐</a> <a href="#" class="btn">评论</a></p>
+			 <h3>丽水市贷贷邦经济信息咨询有限公司</h3>
+			<p>地址：丽水市莲都区古城路147号</p>
+			<p>主营:  中小企业及个人贷款业务</p>
+			<p><span>联系人:谢先生</span>&nbsp&nbsp &nbsp <span>手机:18806787799</span></p>
+              <p style="text-align: center;"><a href="#" class="btn btn-primary">推荐</a> <a href="#" class="btn">评论</a></p>
             </div>
           </div>
         </li>
@@ -207,11 +207,11 @@
           <div class="thumbnail">
             <img src="" alt="">
             <div class="caption">
-			 <h3>缩略图标签</h3>
-			<p>方便的货物管理</p>
-			<p>方便的货物管理</p>
-			<p>方便的货物管理</p>
-             <p><a href="#" class="btn btn-primary">推荐</a> <a href="#" class="btn">评论</a></p>
+			<h3>丽水市贷贷邦经济信息咨询有限公司</h3>
+			<p>地址：丽水市莲都区古城路147号</p>
+			<p>主营:  中小企业及个人贷款业务</p>
+			<p><span>联系人:谢先生</span>&nbsp&nbsp &nbsp <span>手机:18806787799</span></p>
+              <p style="text-align: center;"><a href="#" class="btn btn-primary">推荐</a> <a href="#" class="btn">评论</a></p>
             </div>
           </div>
         </li>
