--- a/zjb/Tpl/Home/City/city.html
+++ b/zjb/Tpl/Home/City/city.html
@@ -7,13 +7,13 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="description" content="" />
 <meta name="keywords" content="北京优途旧机动车经纪有限公司,优途汽车,优途汽车二手车,北京优途旧机动车经纪有限公司地址" />
-<link rel="stylesheet" href="__ROOT__/public/images/reset.css" type="text/css" />
-<link rel="stylesheet" href="__ROOT__/public/home/city.css" type="text/css" />
+<link rel="stylesheet" href="__ROOT__/Public/images/reset.css" type="text/css" />
+<link rel="stylesheet" href="__ROOT__/Public/Home/city.css" type="text/css" />
 <style type="text/css">
 </style>
-<js href="__ROOT__/public/js/citys.js" />
+<js href="__ROOT__/Public/js/citys.js" />
 
-<js href="__ROOT__/public/js/city.js" />
+<js href="__ROOT__/Public/js/city.js" />
 
 </head>
 <body>
