--- a/zjb/Tpl/Home/Publish/publishlc.html
+++ b/zjb/Tpl/Home/Publish/publishlc.html
@@ -8,17 +8,17 @@
   <meta name="Description" content="">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-  <link rel="stylesheet" href="__ROOT__/public/images/reset.css" type="text/css" />
+  <link rel="stylesheet" href="__ROOT__/Public/images/reset.css" type="text/css" />
 
-<js href="__ROOT__/public/js/jquery-1.7.1.js" />
-<js href="__ROOT__/public/js/city.js" />
-<js href="__ROOT__/public/dist/js/bootstrap.js" />
+<js href="__ROOT__/Public/js/jquery-1.7.1.js" />
+<js href="__ROOT__/Public/js/city.js" />
+<js href="__ROOT__/Public/dist/js/bootstrap.js" />
 <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="__ROOT__/public/dist/css/bootstrap.css">
+<link rel="stylesheet" href="__ROOT__/Public/dist/css/bootstrap.css">
 
 
 <!-- Optional theme -->
-<link rel="stylesheet" href="__ROOT__/public/dist/css/bootstrap-theme.css">
+<link rel="stylesheet" href="__ROOT__/Public/dist/css/bootstrap-theme.css">
 
 <link rel="stylesheet" href="__ROOT__/Public/dist/css/github.css"/>
  <!--[if lte IE 6]>
@@ -29,11 +29,11 @@
  <![endif]-->
 <!-- Optional theme -->
 
-<link rel="stylesheet" href="__ROOT__/public/dist/css/bootstrap-responsive.css"/>
+<link rel="stylesheet" href="__ROOT__/Public/dist/css/bootstrap-responsive.css"/>
 
-  <link rel="stylesheet" href="__ROOT__/public/Home/publish.css" type="text/css" />
-   <link rel="stylesheet" href="__ROOT__/public/Home/form.css" type="text/css" />
-   <link rel="stylesheet" href="__ROOT__/public/Home/edit.css" type="text/css" />
+  <link rel="stylesheet" href="__ROOT__/Public/Home/publish.css" type="text/css" />
+   <link rel="stylesheet" href="__ROOT__/Public/Home/form.css" type="text/css" />
+   <link rel="stylesheet" href="__ROOT__/Public/Home/edit.css" type="text/css" />
 
 
 
@@ -82,7 +82,7 @@ border:1px;
 	</div>	
 	
 	<div id="header">
-		<img src="__ROOT__/public/images/logo.jpg" alt=""/>
+		<img src="__ROOT__/Public/images/logo.jpg" alt=""/>
 		<div id="rheader">
 			<div id="city">
 				<span>{$c}</span>&nbsp&nbsp&nbsp&nbsp
@@ -252,8 +252,8 @@ border:1px;
 				
 </div>
 	
-	<js href="__ROOT__/public/js/edit.js" />
-	<js href="__ROOT__/public/js/artDialog.min.js" />
+	<js href="__ROOT__/Public/js/edit.js" />
+	<js href="__ROOT__/Public/js/artDialog.min.js" />
 	
 
 </div>
