--- a/zjb/Tpl/Home/Register/show_reg.html
+++ b/zjb/Tpl/Home/Register/show_reg.html
@@ -8,17 +8,17 @@
   <meta name="Description" content="">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
  
-  <link rel="stylesheet" href="__ROOT__/public/images/reset.css" type="text/css" />
-  <link rel="stylesheet" href="__ROOT__/public/Home/login.css" type="text/css" />
+  <link rel="stylesheet" href="__ROOT__/Public/images/reset.css" type="text/css" />
+  <link rel="stylesheet" href="__ROOT__/Public/Home/login.css" type="text/css" />
 
-<js href="__ROOT__/public/js/jquery-1.7.1.js" />
-<js href="__ROOT__/public/dist/js/bootstrap.js" />
+<js href="__ROOT__/Public/js/jquery-1.7.1.js" />
+<js href="__ROOT__/Public/dist/js/bootstrap.js" />
 <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="__ROOT__/public/dist/css/bootstrap.css">
+<link rel="stylesheet" href="__ROOT__/Public/dist/css/bootstrap.css">
 
 
 <!-- Optional theme -->
-<link rel="stylesheet" href="__ROOT__/public/dist/css/bootstrap-theme.css">
+<link rel="stylesheet" href="__ROOT__/Public/dist/css/bootstrap-theme.css">
 
 <link rel="stylesheet" href="__ROOT__/Tpl/Public/dist/css/github.css"/>
  <!--[if lte IE 6]>
@@ -56,28 +56,10 @@ border:1px;
 </head>
 <body style="background-color:#e7ebea;">
 <div id="container">
-<form name="submitForm" method="post" action="" id="submitForm" target="formSubmit">
-	<div id="pos" >
-		
-		<ul class="nav nav-tabs ">
-			
-				<li class="dropdown">
-				<a class="dropdown-toggle" data-toggle="dropdown" href="#">
-					 注册<span class="caret"></span>
-				</a>
-					<ul class="dropdown-menu">
-							<li><a href="{:U('Register/hyregister')}#desc">会员注册</a></li>
-							<li><a href="{:U('Register/register')}#desc">个人注册</a></li>
-					</ul>
-				</li>
-			<li class="active"><a href="{:U('Login/login')}#desc">登录</a></li>
-			<li class="active"><a href="{:U('Audit/audit')}#desc">欢迎  kkkk登录</a></li>
-		</ul>
-	
-	</div>	
-	
+<form name="submitForm" method="post" action="{:U('Register/register')}" id="submitForm" target="formSubmit">
+    <include file="Common:top"/>
 	<div id="header">
-		<img src="__ROOT__/public/images/logo.jpg" alt=""/>
+		<img src="__ROOT__/Public/images/logo.jpg" alt=""/>
 		<div id="rheader">
 			<div id="city">
 				<span>{$c}</span>&nbsp&nbsp&nbsp&nbsp
@@ -113,7 +95,7 @@ border:1px;
 		</div>
 		<div id="main">
 			<div id="lmain" style="width:500px;height:400px;float:left;margin-top:50px;">
-			        <img src="__ROOT__/public/images/login.jpg" alt="banner" style="margin-left:50px;"/>
+			        <img src="__ROOT__/Public/images/login.jpg" alt="banner" style="margin-left:50px;"/>
 			</div>
 			  <div class="loginbox" style="border-left:solid 2px #e7ebea">
 				  <table   width="100%" class="logintable">
@@ -127,11 +109,12 @@ border:1px;
 						
 						<ul>
 								<li class="info"></li>
-								<li class="info1"><span>手机号:&nbsp;</span><input type="text" name="uname" class="box"/></li>
-								<li class="info1"><span>用户名:&nbsp;</span><input type="text" name="uname" class="box"/></li>
-								<li class="info1"><span>密码:&nbsp;</span><input type="password" name="upwd" class="box"/></li>
-								<li class="info1"><span>确认密码:&nbsp;</span><input type="password" name="upwd1" class="box"/></li>
-								<li class="info1"><span>验证码:&nbsp;</span><input type="text" name="yzm" class="box" id="yzm" style="width:50px;"/></span><img src="__URL__/verify" class="yzm" id="__URL__/verify"/></li>
+								<li class="info1"><span>手机号:&nbsp;</span><input type="text" name="phone" class="box"/></li>
+								<li class="info1"><span>用户名:&nbsp;</span><input type="text" name="name" class="box"/></li>
+                                <li class="info1"><span>邮箱地址:&nbsp;</span><input type="text" name="email" class="box"/></li>
+								<li class="info1"><span>密码:&nbsp;</span><input type="password" name="pwd" class="box"/></li>
+								<li class="info1"><span>确认密码:&nbsp;</span><input type="password" name="pwd1" class="box"/></li>
+								<li class="info1"><span>验证码:&nbsp;</span><input type="text" name="verify" class="box" id="yzm" style="width:50px;"/></span><img src="__URL__/verify" class="yzm" id="__URL__/verify"/></li>
 							</ul>
 						
 						</td>
@@ -140,8 +123,8 @@ border:1px;
 					  	<td></td>
 						  <td style="padding-right:50pt;" >
 							  <span class="butt" style="line-height:50px;">
-							  <input type="submit" name="btnSubmit" value="登录" class="btns" accesskey="l" id="btnSubmit" />
-							  </span><span class="reg-a" border="2"><a href="{:U('Home/Login/login')}">已有账号，直接登录</a></span>
+							  <input type="submit" name="btnSubmit" value="注册" class="btns" accesskey="l" id="btnSubmit" />
+							  </span><span class="reg-a" border="2"><a href="{:U('Index/login')}">已有账号，直接登录</a></span>
 						  </td>
 					  </tr>
 				  </table>
