fix all kinds of small bugs and done the login/register page

--- a/zjb/Tpl/Home/Common/top.html
+++ b/zjb/Tpl/Home/Common/top.html
@@ -10,8 +10,8 @@
                     注册<span class="caret"></span>
                 </a>
 		<ul class="dropdown-menu">
-			<li><a href="{:U('Register/show_reg')}#desc">普通会员注册</a></li>
-			<li><a href="{:U('Register/show_hyreg')}#desc">商家会员注册</a></li>
+			<li><a href="{:U('Register/register')}#desc">普通会员注册</a></li>
+			<li><a href="{:U('Register/hyregister')}#desc">商家会员注册</a></li>
 		</ul>
             </li>
             <li class="active"><a href="{:U('Index/login')}#desc">登录</a></li>
