--- a/zjb/Tpl/Home/Index/index.html
+++ b/zjb/Tpl/Home/Index/index.html
@@ -9,7 +9,7 @@
 </head>
  <body> 	
  <div class="container" style="width:85%; min-width:1170px;">
-	<include file="./zjb/Tpl/Home/Header/header.html"/>
+	<include file="Common:top"/>
 	<include file="./zjb/Tpl/Home/Banner/banner.html"/>
     <include file="./zjb/Tpl/Home/Navigation/navigation.html"/>
 	 <div id="main">
