--- a/zjb/Tpl/Home/Injection/injection.html
+++ b/zjb/Tpl/Home/Injection/injection.html
@@ -1,5 +1,5 @@
 <meta charset="utf-8" />
-<meta name="keywords" content="北京优途旧机动车经纪有限公司,优途汽车,优途汽车二手车,北京优途旧机动车经纪有限公司地址" />
+<meta name="keywords" content="中介帮 rome 信息发布" />
 <link rel="stylesheet" href="__ROOT__/public/images/reset.css" type="text/css" />
 <js href="__ROOT__/Public/js/jquery-1.7.1.js" />
 <js href="__ROOT__/Public/dist/js/bootstrap.js" />
