add change city function

--- a/zjb/Tpl/Home/Banner/banner.html
+++ b/zjb/Tpl/Home/Banner/banner.html
@@ -2,8 +2,8 @@
 		<img src="__ROOT__/Public/images/logo.jpg" alt=""/>
 		<div id="rheader">
 			<div id="city">
-				<span>{$c}</span>&nbsp&nbsp&nbsp&nbsp
-				<a href="{:U('City/city')}#desc" target="_blank">[城市切换]</a>
+				<span>{$Think.session.city_name}</span>&nbsp&nbsp&nbsp&nbsp
+				<a href="{:U('Common/city')}" target="_blank">[城市切换]</a>
 
 			</div>
 			<p style="width:480px;"> 
