done the register and login

--- a/zjb/Tpl/Home/Index/login.html
+++ b/zjb/Tpl/Home/Index/login.html
@@ -45,12 +45,12 @@
               <td>
                 <ul>
                   <li class="info"></li>
-                  <li class="info1"><span>手机号:&nbsp;</span><input type="text" name="uname" class="box"/></li>
+                  <li class="info1"><span>手机号:&nbsp;</span><input type="text" name="phone" class="box"/></li>
                   <li class="info1"><span>密码:&nbsp;</span><input type="password" name="upwd" class="box"/></li>
                   <li class="info1"><span>用户类型:&nbsp;</span>
                     <div style="text-align: left;">
-                      <input type="radio" value="会员登录" name="group" checked="checked">会员登录
-                      <input type="radio" value="个人登录" name="group" checked="checked">个人登录
+                      <input type="radio" value="0" name="type" checked="checked">普通会员
+                      <input type="radio" value="1" name="type" >商家会员
                     </div>
                   </li>
                   <li class="info1"><span>验证码:&nbsp;</span><input type="text" name="yzm" class="box" id="yzm" style="width:50px;"/></span><img src="__APP__/Common/verify" class="yzm" id="verify"/></li>
@@ -60,7 +60,7 @@
             <tr height="60px">
               <td></td>
               <td style="padding-left: -20pt;">
-                <input type="checkbox" style="vertical-align: middle;" id="coks" value="on" name="remember" />
+                <input type="checkbox" style="vertical-align: middle;" id="coks"  name="remember" />
                 <label class="logintip" for="coks">下次自动登录 (公共场所慎用)</label>
               </td>
             </tr>
