--- a/zjb/Tpl/Home/Register/register.html
+++ b/zjb/Tpl/Home/Register/register.html
@@ -46,6 +46,7 @@
                   <li class="info"></li>
                   <li class="info1"><span>用户名:&nbsp;</span><input type="text" name="uname" class="box"/></li>
                   <li class="info1"><span>手机号:&nbsp;</span><input type="text" name="phone" class="box"/></li>
+                  <li class="info1"><span>邮箱:&nbsp;</span><input type="text" name="email" class="box"/></li>
                   <li class="info1"><span>选择城市：&nbsp;</span>
                     <include file="Common:city_sel"/>
                   </li>   
